Bug 1694304 - cherry-pick libwebrtc 28ac56a415. r=webrtc-reviewers,jib

Upstream commit: https://webrtc.googlesource.com/src/+/28ac56a415a7513f1ebfb985659bf2012d84df3f
    In VideoCaptureDS::Stop() fully stop the device

    This makes the device light turn off when stopped.

    Bug: webrtc:15109
    Change-Id: I1deecbc2463e2e316e01ff1f061ab6b0313c1aa1
    Reviewed-on: https://webrtc-review.googlesource.com/c/src/+/302200
    Commit-Queue: Ilya Nikolaevskiy <ilnik@webrtc.org>
    Reviewed-by: Ilya Nikolaevskiy <ilnik@webrtc.org>
    Reviewed-by: Per Kjellander <perkj@webrtc.org>
    Cr-Commit-Position: refs/heads/main@{#39953}

Differential Revision: https://phabricator.services.mozilla.com/D176507