third_party/libwebrtc/modules/video_capture/windows/video_capture_ds.cc
@@ -113,15 +113,7 @@ int32_t VideoCaptureDS::Init(const char* deviceUniqueIdUTF8) {
     return -1;
   }
 
-  // Temporary connect here.
-  // This is done so that no one else can use the capture device.
   if (SetCameraOutput(_requestedCapability) != 0) {
-    return -1;
-  }
-  hr = _mediaControl->Pause();
-  if (FAILED(hr)) {
-    RTC_LOG(LS_INFO)
-        << "Failed to Pause the Capture device. Is it already occupied? " << hr;
     return -1;
   }
   RTC_LOG(LS_INFO) << "Capture device '" << deviceUniqueIdUTF8
@@ -139,7 +131,13 @@ int32_t VideoCaptureDS::StartCapture(const VideoCaptureCapability& capability) {
       return -1;
     }
   }
-  HRESULT hr = _mediaControl->Run();
+  HRESULT hr = _mediaControl->Pause();
+  if (FAILED(hr)) {
+    RTC_LOG(LS_INFO)
+        << "Failed to Pause the Capture device. Is it already occupied? " << hr;
+    return -1;
+  }
+  hr = _mediaControl->Run();
   if (FAILED(hr)) {
     RTC_LOG(LS_INFO) << "Failed to start the Capture device.";
     return -1;
@@ -150,7 +148,7 @@ int32_t VideoCaptureDS::StartCapture(const VideoCaptureCapability& capability) {
 int32_t VideoCaptureDS::StopCapture() {
   MutexLock lock(&api_lock_);
 
-  HRESULT hr = _mediaControl->Pause();
+  HRESULT hr = _mediaControl->StopWhenReady();
   if (FAILED(hr)) {
     RTC_LOG(LS_INFO) << "Failed to stop the capture graph. " << hr;
     return -1;
